added fixed footer

--- a/style.css
+++ b/style.css
@@ -550,6 +550,26 @@ mark {
 		display: none;
 	}
 
+.footer {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	z-index: 0;
+}
+.footer-wrapper {
+	width: 100%;
+}
+.footer-line {
+	margin-bottom: 350px;
+}
+.space {
+	height: 500px;
+}
+.footer-flex {
+	display: flex;
+	justify-content: center;	
+}
+
 @media screen and (max-width: 1050px) {
 	.logo {
 		margin-left: 15px; 
@@ -613,11 +633,20 @@ mark {
 	.content-comments {
 		width: 435px;
 	}
+}
 
+@media screen and (max-width: 773px) {
+	.footer-line {
+	margin-bottom: 400px;
+}
 
 }
 
 @media screen and (max-width: 680px) {
+
+	.footer-line {
+	margin-bottom: 650px;
+}
 
 	.fields {
 		height: 520px;
