--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
 .wrapper {
 	position: relative;
 	z-index: 50;
+	-webkit-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
+box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
 }
 
 .scroll-indicator {
