--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h1 strong {
 }
 
 .form {
-	margin-top: 150px;
+	margin-top: 100px;
 }
 
 .form h2 {
@@ -433,6 +433,7 @@ p.error {
 }
 
 .icon {
+	width: 450px;
 }
 
 .download {
@@ -763,6 +764,9 @@ mark {
 	.icon {
 		width: 300px;
 	}
+	.img-icon {
+	margin-top: 50px;
+}
 	.video iframe {
 		width: 320px;
 		height: 180px;
