--- a/style.css
+++ b/style.css
@@ -274,11 +274,11 @@ h1 strong {
 }
 h3.button-text {
 	position: absolute;
-	margin-top: 10px;
-	margin-left: 100px;
+	margin-top: 13px;
+	margin-left: 95px;
 }
 h4.button-text {
-	margin-top: 25px;
+	margin-top: 32px;
 	margin-left: 55px;
 	font-weight: 400;
 }
@@ -322,6 +322,7 @@ h4.button-text {
  	text-indent: 0;
  	border-radius: 0;
  	border-radius: 5px;
+ 	height: 70px;
 }
 
 #send:hover {
@@ -702,6 +703,9 @@ mark {
 
 
 @media screen and (max-width: 950px) {
+	.form h2 {
+		font-size: 27px;
+	}
 
 	h3.button-text {
 	position: absolute;
