--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
 }
 .backgrounds img {
 	margin-bottom: 700px;
-	opacity: 0.5;
 }
 
 .wrapper {
@@ -32,6 +31,12 @@ body {
 box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
 border-top-left-radius: 30px;
 border-top-right-radius: 30px;
+border-bottom-left-radius: 30px;
+border-bottom-right-radius: 30px;
+
+/*overflow: hidden;*/
+background-image: url(img/background2.png);
+background-repeat: no-repeat;
 
 }
 
@@ -47,8 +52,8 @@ border-top-right-radius: 30px;
 }
 
 .main {
-	/*background-image: url(img/background.png);*/
-	background-repeat: no-repeat;
+	
+	
 	background-size: 100% auto;
 	margin-top: 30px;
 }
@@ -64,7 +69,7 @@ border-top-right-radius: 30px;
 }
 
 .wrapper {
-	background-color: rgba(32, 32, 38, 0.95);
+	background-color: rgba(32, 32, 38, 1);
 	max-width: 1300px;
 	margin: 0 auto;
 }
@@ -166,9 +171,9 @@ h1 strong {
 }
 
 .videoHeader {
-	color: #c6ff00;
-	font-size: 24px;
-	font-weight: 400;
+	color: #ffffff;
+	font-size: 21px;
+	font-weight: 300;
 	text-align: center;
 	margin-top: 80px;
 }
@@ -196,11 +201,16 @@ h1 strong {
 	margin-top: 50px;
 }
 
-.form h2 {
+.form-h2  {
 	font-size: 30px;
-	color: #ffffff;
+	color: #c4fd00;
 	text-align: center;
 	font-weight: 400;
+	text-transform: uppercase;
+	word-wrap: normal;
+	width: 100%;
+	margin-left: -60px;
+	width: 1100px;
 }
 
 
@@ -369,7 +379,7 @@ p.error {
 }
 
 .client {
-	background-color: #333343;
+	background-color: #373741;
 	height: 400px;
 	width: 475px;
 	border-radius: 5px;
@@ -431,8 +441,8 @@ p.error {
 
 
 #comment {
-	background-color: #333343;
-	color: #ffffff;
+	background-color: #ffd700;
+	color: #000000;
 	height: 60px;
 	font-size: 18px;
 	font-weight: 500;
@@ -514,6 +524,13 @@ p.error {
 
 .download {
 	margin-top: 150px;
+	padding-top: 80px;
+
+
+}
+.third-block {
+	background-image: url(img/background1.png);
+	background-repeat: no-repeat;
 }
 
 .download .content {
@@ -523,14 +540,26 @@ p.error {
 .download h2 {
 
 	color: #ffffff;
-	font-size: 30px;
+	font-size: 48px;
 	text-align: center;
 	font-weight: 300;
 	margin-top: 5px;
+	text-transform: uppercase;
+	margin-bottom: 0;
+
+
+}
+
+h2.second_h {
+	font-weight: 300;
+	line-height: 0.5;
+	font-size: 30px;
+	margin-bottom: 90px;
 }
 .download h2 strong {
 	font-weight: 500;
-	line-height: 2;
+	/*line-height: 2;*/
+	font-size: 30px;
 }
 
 #download {
@@ -561,7 +590,7 @@ p.error {
 }
 
 .payments {
-	margin-top: 150px;
+	margin-top: 250px;
 }
 
 .line1 {
@@ -591,6 +620,8 @@ p.error {
 	line-height: 1.8;
 	font-size: 16px;
 	font-weight: 300;
+	border-bottom-left-radius: 30px;
+border-bottom-right-radius: 30px;
 }
 .links {
 	color: #c5ff00;
@@ -649,7 +680,7 @@ textarea {
 }
 
 .footer {
-	position: fixed;
+	
 	bottom: 0;
 	width: 100%;
 	z-index: 0;
