--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@ body {
 .wrapper {
 	position: relative;
 	z-index: 50;
-	-webkit-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
+	/*-webkit-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
-box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);
-border-top-left-radius: 30px;
-border-top-right-radius: 30px;
-border-bottom-left-radius: 30px;
-border-bottom-right-radius: 30px;
+box-shadow: 0px 5px 50px 5px rgba(0,0,0,0.75);*/
+border-top-left-radius: 15px;
+border-top-right-radius: 15px;
+border-bottom-left-radius: 15px;
+border-bottom-right-radius: 15px;
 
 /*overflow: hidden;*/
 background-image: url(img/background2.png);
@@ -373,9 +373,10 @@ p.error {
 
 .reply h2 {
 	color: #ffffff;
-	font-size: 30px;
+	font-size: 48px;
 	text-align: center;
 	font-weight: 300;
+	text-transform: uppercase;
 }
 
 .client {
@@ -617,11 +618,13 @@ h2.second_h {
 .footer {
 	background-color: rgba(32, 32, 38, 0.9);
 	text-align: center;
-	line-height: 1.8;
+	line-height: 2;
 	font-size: 16px;
 	font-weight: 300;
-	border-bottom-left-radius: 30px;
-border-bottom-right-radius: 30px;
+	border-bottom-left-radius: 15px;
+border-bottom-right-radius: 15px;
+margin-top: 100px;
+padding-bottom: 20px;
 }
 .links {
 	color: #c5ff00;
