--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ border-bottom-right-radius: 15px;
 /*overflow: hidden;*/
 background-image: url(img/background2.png);
 background-repeat: no-repeat;
+background-position-x: center;
 
 }
 
@@ -544,6 +545,7 @@ p.error {
 .third-block {
 	background-image: url(img/background1.png);
 	background-repeat: no-repeat;
+	background-position-x: center;
 }
 
 .download .content {
@@ -555,7 +557,7 @@ p.error {
 	color: #ffffff;
 	font-size: 48px;
 	text-align: center;
-	font-weight: 300;
+	font-weight: 700;
 	margin-top: 5px;
 	text-transform: uppercase;
 	margin-bottom: 0;
@@ -564,11 +566,16 @@ p.error {
 }
 
 h2.second_h {
-	font-weight: 300;
-	line-height: 0.5;
+	font-weight: 400;
+	line-height: 1;
 	font-size: 30px;
 	margin-bottom: 90px;
+	margin-top:-20px;
 }
+
+/*.second_h {
+	font-weight: 300;
+}*/
 .download h2 strong {
 	font-weight: 500;
 	/*line-height: 2;*/
@@ -715,6 +722,19 @@ textarea {
 .footer-flex {
 	display: flex;
 	justify-content: center;	
+}
+@media screen and (max-width: 1350px) {
+	.form-h2 {
+		margin-top: 30px;
+	}
+
+}
+@media screen and (max-width: 1120px) {
+	.form-h2 {
+		width: 100%;
+		margin-left: 0;
+		font-size: 26px;
+	}
 
 }
 
@@ -771,6 +791,10 @@ h4.button-text {
 	margin-top: 25px;
 	margin-left: 0px;
 	font-weight: 400;
+}
+
+.reply h2 {
+	font-size: 38px;
 }
 
 	.fields {
@@ -869,6 +893,10 @@ h4.button-text {
 		font-size: 26px;
 	}
 
+	h1 strong {
+		font-size: 32px;
+	}
+
 	.form h2 {
 	font-size: 24px;
 	}
@@ -909,6 +937,16 @@ h4.button-text {
 
 	.download h2 {
 		font-size: 24px;
+	}
+
+	h2.second_h {
+		font-size: 20px;
+	}
+	.download h2 strong {
+		font-size: 20px;
+	}
+	.form-h2 {
+		font-size: 22px;
 	}
 
 	.line1 {
