--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@
 	color: #c1f801;
 	font-weight: 400;
 }
+.thanks h4 a {
+	
+	color: #c1f801;
+	text-decoration: none;
+	
+}
 
 .br420 {
 		display: none;
