--- a/style.css
+++ b/style.css
@@ -92,7 +92,8 @@ background-position-x: center;
 
 .scroll-indicator {
 	position: fixed;
-	top: 365px;
+	top: 50%;
+	margin-top: -65px;
 	right: 145px;
 	display: flex;
 	flex-direction: column;
