--- a/style.css
+++ b/style.css
@@ -255,6 +255,18 @@ h1 strong {
 	margin-top: 40px;
 	margin-left: 117px;
 }
+.video iframe::after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background-color: #ff0000;
+}
+.video video {
+	margin-top: 40px;
+	margin-left: 117px;
+}
 
 .field {
 	margin-bottom: 30px;
@@ -1083,6 +1095,12 @@ border-bottom-right-radius: 0;
 		margin-top: 25px;
 		margin-left: 78px;
 	}
+	.video video {
+		width: 320px;
+		height: 180px;
+		margin-top: 25px;
+		margin-left: 78px;
+	}
  
 	.video {
 		height: 307px;
@@ -1179,6 +1197,10 @@ border-bottom-right-radius: 0;
 		margin-top: 33px;
     	margin-left: 48px;
 	}
+	.video video {
+		margin-top: 33px;
+    	margin-left: 48px;
+	}
 
 	.line1 {
 		width: 420px;
@@ -1213,6 +1235,12 @@ border-bottom-right-radius: 0;
 		width: 320px;
 	}
 	.video iframe {
+		width: 240px;
+		height: 135px;
+		margin-top: 65px;
+   	 	margin-left: 39px;
+	}
+	.video video {
 		width: 240px;
 		height: 135px;
 		margin-top: 65px;
